--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 3.10)
+OPTION( NO_CRYPT "Disable encryption usage" OFF )
 
 include("${CMAKE_CURRENT_SOURCE_DIR}/cmake/get-version.cmake")
 
