--- a/build
+++ b/build
@@ -86,7 +86,8 @@ if [ x$1 = "xdebian" ]; then
   here=`pwd`
   deb_destdir=${here}/debian-template/wiringPi
   cd debian-template/wiringPi
-  ARCH=$(dpkg-architecture -qDEB_HOST_ARCH)
+  export ARCH=$(dpkg-architecture -qDEB_HOST_ARCH)
+  echo architecture $ARCH
   envsubst < control_template > DEBIAN/control
   rm -rf usr
   cd $here/wiringPi
@@ -97,7 +98,7 @@ if [ x$1 = "xdebian" ]; then
   make install-deb INCLUDE='-I../wiringPi -I../devLib' LDFLAGS=-L../debian-template/wiringPi/usr/lib DEB_DESTDIR=${deb_destdir}
   cd $here/debian-template
   fakeroot dpkg-deb --build wiringPi
-  dpkg-name wiringPi.deb
+  dpkg-name -o wiringPi.deb
   exit
 fi
 
