'chown root.root' fixed to 'chown root:root'; KDevelop files added to .gitignore

--- a/wiringPiD/Makefile
+++ b/wiringPiD/Makefile
@@ -70,7 +70,7 @@ install: wiringpid
 	$Q echo "[Install]"
 	$Q mkdir -p		$(DESTDIR)$(PREFIX)/sbin
 	$Q cp wiringpid		$(DESTDIR)$(PREFIX)/sbin
-	$Q chown root.root	$(DESTDIR)$(PREFIX)/sbin/wiringpid
+	$Q chown root:root	$(DESTDIR)$(PREFIX)/sbin/wiringpid
 
 #	$Q mkdir -p		$(DESTDIR)$(PREFIX)/man/man8
 #	$Q cp gpio.1		$(DESTDIR)$(PREFIX)/man/man8
