--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(WiringPiLib)
 # Include subdirectories
 add_subdirectory(devLib)
 add_subdirectory(gpio)
-add_subdirectory(pins)
+#add_subdirectory(pins)
 add_subdirectory(wiringPi)
-add_subdirectory(wiringPiD)
+#add_subdirectory(wiringPiD)
