#263 PiFace PWM unit test

--- a/wiringPi/test/Makefile
+++ b/wiringPi/test/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 CFLAGS = -Wall
-LDFLAGS = 
+LDFLAGS =
 
 # Need BCM26 <-> BCM19 connected (1kOhm)
 tests = wiringpi_test1_sysfs wiringpi_test2_sysfs wiringpi_test3_device_wpi wiringpi_test4_device_phys wiringpi_test5_default wiringpi_test6_isr wiringpi_test7_version
@@ -9,30 +9,36 @@ tests = wiringpi_test1_sysfs wiringpi_test2_sysfs wiringpi_test3_device_wpi wiri
 xotests = wiringpi_xotest_test1_spi wiringpi_i2c_test1_pcf8574
 
 # Need PiFace hardware and tests condition
-pifacetests = wiringpi_piface_test1
+pifacetests = wiringpi_piface_test1 wiringpi_test9_pwm
 
 all: $(tests) $(xotests) $(pifacetests)
 
-wiringpi_test1_sysfs: 
+wiringpi_test1_sysfs:
 	${CC} ${CFLAGS} wiringpi_test1_sysfs.c -o wiringpi_test1_sysfs -lwiringPi
 
-wiringpi_test2_sysfs: 
+wiringpi_test2_sysfs:
 	${CC} ${CFLAGS} wiringpi_test2_sysfs.c -o wiringpi_test2_sysfs -lwiringPi
 
-wiringpi_test3_device_wpi: 
+wiringpi_test3_device_wpi:
 	${CC} ${CFLAGS} wiringpi_test3_device_wpi.c -o wiringpi_test3_device_wpi -lwiringPi
 
-wiringpi_test4_device_phys: 
+wiringpi_test4_device_phys:
 	${CC} ${CFLAGS} wiringpi_test4_device_phys.c -o wiringpi_test4_device_phys -lwiringPi
 
-wiringpi_test5_default: 
+wiringpi_test5_default:
 	${CC} ${CFLAGS} wiringpi_test5_default.c -o wiringpi_test5_default -lwiringPi
 
-wiringpi_test6_isr: 
+wiringpi_test6_isr:
 	${CC} ${CFLAGS} wiringpi_test6_isr.c -o wiringpi_test6_isr -lwiringPi
 
-wiringpi_test7_version: 
+wiringpi_test7_version:
 	${CC} ${CFLAGS} wiringpi_test7_version.c -o wiringpi_test7_version -lwiringPi
+
+wiringpi_test9_pwm:
+	${CC} ${CFLAGS} wiringpi_test9_pwm.c -o wiringpi_test9_pwm -lwiringPi
+
+wiringpi_piface_test1:
+	${CC} ${CFLAGS} wiringpi_piface_test1.c -o wiringpi_piface_test1 -lwiringPi -lwiringPiDev
 
 wiringpi_xotest_test1_spi:
 	${CC} ${CFLAGS} wiringpi_xotest_test1_spi.c -o wiringpi_xotest_test1_spi -lwiringPi
@@ -40,14 +46,16 @@ wiringpi_xotest_test1_spi:
 wiringpi_i2c_test1_pcf8574:
 	${CC} ${CFLAGS} wiringpi_i2c_test1_pcf8574.c -o wiringpi_i2c_test1_pcf8574 -lwiringPi
 
-wiringpi_piface_test1:
-	${CC} ${CFLAGS} wiringpi_piface_test1.c -o wiringpi_piface_test1 -lwiringPi -lwiringPiDev
 
 test:
 	@error_state=false ; \
 	for t in $(tests) ; do \
 		echo === unit test: $${t} === ; \
-		time ./$${t}; \
+		if [ $${t} = *"pwm" ]; then \
+			time sudo ./$${t} ; \
+		else \
+			time ./$${t} ; \
+		fi ; \
 		if [ $$? -ne 0 ]; then \
 		  error_state=true ; \
 		fi ; \
@@ -63,7 +71,11 @@ xotest:
 	@error_state=false ; \
 	for t in $(tests) $(xotests)  ; do \
 		echo === XO unit test: $${t} === ; \
-		time ./$${t} ; \
+		if [ $${t} = *"pwm" ]; then \
+			time sudo ./$${t} ; \
+		else \
+			time ./$${t} ; \
+		fi ; \
 		if [ $$? -ne 0 ]; then \
 		  error_state=true ; \
 		fi ; \
@@ -79,7 +91,11 @@ pifacetest:
 	@error_state=false ; \
 	for t in $(tests) $(pifacetests)  ; do \
 		echo === PiFace unit test: $${t} === ; \
-		time ./$${t} ; \
+		if [ $${t} = *"pwm" ]; then \
+			time sudo ./$${t} ; \
+		else \
+			time ./$${t} ; \
+		fi ; \
 		if [ $$? -ne 0 ]; then \
 		  error_state=true ; \
 		fi ; \
@@ -91,7 +107,7 @@ pifacetest:
 		echo "\n\e[5mPIFACE TEST SUCCESS\e[0m\n"; \
 	fi
 
-clean: 
+clean:
 	for t in $(tests) $(xotests) $(pifacetests) ; do \
 		rm -fv $${t} ; \
 	done
