--- a/gpio/CMakeLists.txt
+++ b/gpio/CMakeLists.txt
@@ -3,6 +3,9 @@
 cmake_minimum_required(VERSION 3.10)
 project(gpio)
 
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(libcrypt REQUIRED IMPORTED_TARGET)
+
 # Source files
 set(SRC
     gpio.c
@@ -20,7 +23,7 @@ find_library(WIRINGPI_LIB wiringPi)
 find_library(WIRINGPI_DEV_LIB wiringPiDev)
 
 # Link the required libraries
-target_link_libraries(gpio ${WIRINGPI_LIB} ${WIRINGPI_DEV_LIB} pthread rt m crypt)
+target_link_libraries(gpio ${WIRINGPI_LIB} ${WIRINGPI_DEV_LIB} pthread rt m PkgConfig::libcrypt)
 
 # Install the executable
 install(TARGETS gpio DESTINATION bin)
