Globally set shared library versions from root CMakeLists.txt
By the way, set SOVERSION to version major. It also fixes wiringPiDev
shared library version not correctly set.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 3.10)
 project(WiringPiLib)
 
+# Read version from version.h
+file(READ "${CMAKE_CURRENT_SOURCE_DIR}/version.h" WIRINGPI_VERSION)
+string(REGEX REPLACE ".*VERSION \"([0-9]+.[0-9]+)\".*" "\\1" WIRINGPI_VERSION "${WIRINGPI_VERSION}")
+string(REGEX REPLACE "([0-9]+)\..*" "\\1" WIRINGPI_SOVERSION "${WIRINGPI_VERSION}")
+
 # Include subdirectories
 add_subdirectory(devLib)
 add_subdirectory(gpio)
