--- a/wiringPi/test/Makefile
+++ b/wiringPi/test/Makefile
@@ -3,13 +3,13 @@ CFLAGS = -Wall
 LDFLAGS =
 
 # Need BCM19 <-> BCM26, +PWM: BCM12 <-> BCM13, BCM18 <-> BCM17 connected (1kOhm)
-tests = wiringpi_test1_sysfs wiringpi_test2_sysfs wiringpi_test3_device_wpi wiringpi_test4_device_phys wiringpi_test5_default wiringpi_test6_isr wiringpi_test7_version wiringpi_test9_pwm
+tests = wiringpi_test1_sysfs wiringpi_test2_sysfs wiringpi_test3_device_wpi wiringpi_test4_device_phys wiringpi_test5_default wiringpi_test6_isr wiringpi_test7_version wiringpi_test8_pwm wiringpi_test9_pwm
 
 # Need XO hardware
-xotests = wiringpi_xotest_test1_spi wiringpi_i2c_test1_pcf8574 wiringpi_test9_pwm
+xotests = wiringpi_xotest_test1_spi wiringpi_i2c_test1_pcf8574 wiringpi_test8_pwm wiringpi_test9_pwm
 
 # Need PiFace hardware and BCM23 <-> BCM24 , BCM18 <-> BCM17 connected (1kOhm), and PiFace Out7<->In4, Out6<->In5, R0_NO<->In6, R0_NO<->In7, R_C<-100Ohm->GND
-pifacetests = wiringpi_piface_test1 wiringpi_test9_pwm
+pifacetests = wiringpi_piface_test1 wiringpi_test8_pwm wiringpi_test9_pwm
 
 all: $(tests) $(xotests) $(pifacetests)
 
@@ -33,6 +33,9 @@ wiringpi_test6_isr:
 
 wiringpi_test7_version:
 	${CC} ${CFLAGS} wiringpi_test7_version.c -o wiringpi_test7_version -lwiringPi
+
+wiringpi_test8_pwm:
+	${CC} ${CFLAGS} wiringpi_test8_pwm.c -o wiringpi_test8_pwm -lwiringPi
 
 wiringpi_test9_pwm:
 	${CC} ${CFLAGS} wiringpi_test9_pwm.c -o wiringpi_test9_pwm -lwiringPi
